<resources>
    <string name="app_name">Coming Soon</string>

    <!-- Main Activity -->
    <string name="passenger_entry">Passenger Entry</string>
    <string name="driver_login">Driver Login</string>
    <string name="welcome_message">Welcome to\nComing Soon!</string>
    <string name="intro_text">The best way to find your way around. Let\'s get \nstarted!</string>

    <!-- Sign In and Sign Up Activities -->
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="driver_code">Driver Code</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="continue_button">Continue</string>
    <string name="forgot_password">Forgot Password?</string>

    <!-- Search Activity -->
    <string name="all_lines">All Lines</string>
    <string name="example_route_1">KIZILAY - DİKMEN - ATATÜRK SİTESİ</string>
    <string name="example_route_2">ULUS - BALGAT - 100. YIL - ÇİĞDEM</string>
    <string name="example_route_3">TUNUS - BİLKENT</string>
    <string name="example_route_4">SIHHİYE - BİLKENT - AŞTİ</string>
    <string name="example_route_5">DENİZCİLER - SIHHİYE - KORU SİTESİ</string>

    <!-- Map Activity -->
    <string name="enter_place_here">Enter Place Here</string>

    <!-- Settings Activity -->
    <string name="settings">Settings</string>
    <string name="notification_timer_label">Notification Settings</string>
    <string name="notification_timer_info">
        How do you want to be notified?</string>
    <string name="privacy">Privacy</string>
    <string name="privacy_preferences">Privacy preferences</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="help_feedback"><![CDATA[Help & Feedback]]></string>
    <string name="location_title">Route Options</string>
    <string name="location_subtitle">Change your city</string>

    <!-- Privacy Settings Activity -->
    <string name="location_privacy">Allow location information</string>

    <!-- Notification Settings Activity -->

    <!-- Location Settings Activity -->
    <string name="walk_preferences">Maximum walking distance</string>

    <!-- Help Settings Activity -->
    <string name="faq">Frequently Asked Questions</string>
    <string name="example_question_1">How can I find a route?</string>
    <string name="example_question_2">How can I find a bus?</string>
    <string name="feedback_request">Give Us Your Feedback</string>
    <string name="email_adress">Email </string>
    <string name="your_feedback">Your Feedback</string>

    <!-- Profile Activity -->
    <string name="profile">Profile</string>
    <string name="example_driver_greeting">Hi, David!</string>
    <string name="example_driver_name">David</string>
    <string name="example_driver_surname">Davenport</string>
    <string name="name_surname">Name Surname</string>
    <string name="example_driver_email">daviddaveport@bilkent.edu.tr</string>
    <string name="logout">Logout</string>

    <!-- Change & Forgot Password Activity -->
    <string name="change_password">Change Password</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm new password</string>

    <!-- Map Sheet Search Dialog -->
    <string name="example_minibus_route_1">Kızılay Minibus</string>
    <string name="example_duration_1">8 min away</string>
    <string name="example_minibus_route_2">Bilkent Minibus</string>
    <string name="example_duration_2">13 min away</string>
    <string name="example_minibus_route_3">Odtü Minibus</string>
    <string name="example_duration_3">15 min away</string>

    <!-- Driver Vehicle/Route Info -->
    <string name="route_specification">Choose your route</string>
    <string name="your_plate_number">Your plate number</string>

    <string-array name="route_spinner">
        <item>Select your route</item>
        <item>KIZILAY - DİKMEN - ATATÜRK SİTESİ</item>
        <item>ULUS - BALGAT - 100. YIL - ÇİĞDEM</item>
        <item>TUNUS - BİLKENT</item>
        <item>SIHHİYE - BİLKENT - AŞTİ</item>
        <item>DENİZCİLER - SIHHİYE - KORU SİTESİ</item>
    </string-array>

    <!-- Extra -->
    <string name="todo">TODO</string>
    <string name="reset_password">Reset Password</string>
    <string name="notification_text">Tracking, tap to cancel</string>
    <string name="transport_id" translatable="false">123</string>
    <string name="firebase_path" translatable="false">locations</string>
    <string name="firebase_email" translatable="false">test@example.com</string>
    <string name="firebase_password" translatable="false">password</string>
    <string name="color">#454F63</string>
    <string name="search_here">Search here</string>
    <string name="search">search</string>
    <string name="enter_address_city_or_zip_code">Enter Address, City or Zip Code</string>


</resources>
