<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme"
    tools:context=".DriverProfileActivity">

    <LinearLayout
        android:id="@+id/driver_profile_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="24dp"
        android:paddingTop="8dp"
        android:paddingRight="24dp"
        android:paddingBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.051">

        <Button
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:id="@+id/back_button3"
            android:layout_marginRight="16dp"
            android:background="@drawable/back2" />

        <TextView
            android:id="@+id/profile_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sfsemibold"
            android:gravity="center_horizontal"
            android:text="@string/profile"
            android:textColor="@color/gray5"
            android:textAlignment="textStart"
            android:textFontWeight="600"
            android:textSize="24sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/driver_greeting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sfsemibold"
        android:text="@string/example_driver_greeting"
        android:textAlignment="center"
        android:textColor="@color/main"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/driver_profile_label"
        app:layout_constraintVertical_bias="0.189" />

    <LinearLayout
        android:id="@+id/linear_layout_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_corners"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/driver_greeting"
        app:layout_constraintVertical_bias="0.292">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="-1dp"
            tools:layout_editor_absoluteY="311dp">


            <TextView
                android:id="@+id/name_field_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:text="@string/name_surname"
                android:textColor="@color/gray5" />

            <TextView
                android:id="@+id/name_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginLeft="4dp"
                android:textSize="18dp"
                android:ems="10"
                android:fontFamily="@font/sfregular"
                android:textColor="@color/gray4" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="12dp"
            android:layout_marginRight="8dp"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="-1dp"
            tools:layout_editor_absoluteY="311dp">


            <TextView
                android:id="@+id/email_field_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:text="@string/email_adress"
                android:textColor="@color/gray5" />

            <TextView
                android:id="@+id/email_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:fontFamily="@font/sfregular"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="4dp"
                android:textSize="18dp"
                android:textColor="@color/gray4" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/changePasswordButton"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_corners"
        android:paddingLeft="28dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/change_password"
        android:textColor="@color/gray4"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear_layout_2"
        app:layout_constraintVertical_bias="0.099"
        android:focusable="true" />

    <LinearLayout
        android:id="@+id/logout_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changePasswordButton"
        app:layout_constraintVertical_bias="1.0">

        <Button
            android:id="@+id/logout_button"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/logout"
            android:drawableTint="@color/gray3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sfregular"
            android:text="@string/logout"
            android:textColor="@color/gray2"
            android:textSize="16dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>