<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPasswordActivity">

    <LinearLayout
        android:id="@+id/change_password_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="24dp"
        android:paddingTop="8dp"
        android:paddingRight="24dp"
        android:paddingBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <Button
            android:id="@+id/forgot_password_back_button"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/back2" />

        <TextView
            android:id="@+id/forgot_password_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sfsemibold"
            android:gravity="center_horizontal"
            android:text="@string/forgot_password"
            android:textAlignment="textStart"
            android:textFontWeight="600"
            android:textSize="24sp"
            tools:ignore="RtlCompat" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/change_password_label"
        app:layout_constraintVertical_bias="0.108">


        <EditText
            android:id="@+id/forgot_password_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/input_field"
            android:hint="@string/email_adress"
            android:inputType="textEmailAddress"
            android:paddingTop="16dp"
            android:paddingBottom="16dp" />

        <Button
            android:id="@+id/reset_password_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/blue_button"
            android:text="@string/reset_password"
            android:textColor="@color/theme" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/forgot_password_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>